--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_displaymode: ^0.6.0
+  desktop_window: ^0.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
